Fixed the whitespace issue with inline-block main

--- a/Tablet.MvcMusicStore/Content/Site.css
+++ b/Tablet.MvcMusicStore/Content/Site.css
@@ -41,6 +41,7 @@ h1 {
 .main-nav {
     display: inline-block;
     margin: 0 10px;
+    font-size: 0;
     float: right;
 }
 
